# kino-flow

./: .gitattributes  .gitignore  CLAUDE.md  COST_OPTIMIZATION_PLAN.md  DESIGN.md  HANDOFF.md
.claude/: settings.local.json
color-quiz/: README.md  app.py  launch.bat  launch.ps1  results.db  start.bat
color-quiz/static/: admin.html  index.html  quiz.html  result.html  style.css  thanks.html
cost-optimization/: BROLL_MATCH_HANDOFF.md  CLAUDE_CODE_HANDOFF.md  KINO_BRAIN_HANDOFF.md  MORE_REPOS.md  QUALITY_REPOS.md  VO_FIX_HANDOFF.md  kino_brain.py  model_routing.json  server_patch.md  setup.bat  setup_veditor_addons.ps1  vo_sanitize.py
dih/: README.md  common.py  compose.py  config.json  gemini_script.py  label_match.py  orchestrate.py  server.py  slack_import.py  start-dih.bat
dih/broll/: README.md
dih/knowledge/: README.md  brand-voice.md
dih/music/: README.md
dih/notes/: README.md  _template.md
dih/static/: app.js  index.html  style.css
docs/: META_ADS_PLAYBOOK.md  MOTION_PHILOSOPHY.md  NANO_BANANA_PROMPTING.md  RENDER_EXPORT_PHILOSOPHY.md  TRIMMING_PHILOSOPHY.md  VEO_PROMPTING.md
gateway/: .dev.vars.example  README.md  package.json  wrangler.toml
gateway/src/: index.js
installer/: README.md  config.example.json  launch.py
studio/: caption_render.py  open-veditor.bat  pyproject.toml  server.py  start-studio.bat
studio/static/: app.js  genai.js  heygen_avatars.json  heygen_voices.json  index.html  manager.js  streamlined.js  style.css  timeline.js  voices.json
studio/veditor_studio.egg-info/: PKG-INFO  SOURCES.txt
video-use/: SKILL.md
(+30 files in other folders)
